# PSE-Bee-Game

./: .directory  .gitignore  .travis.yml  CMakeLists.txt  Presentation - Usability Tests.pptx  README.md  doxygen.conf
Classes/: AboutScene.cpp  AboutScene.h  AppDelegate.cpp  AppDelegate.h  BeeHive.cpp  BeeHive.h  BeeHiveAtlas.cpp  BeeHiveAtlas.h  DEFINITIONS.h  GameScene.cpp  GameScene.h  HUDLayer.cpp  HUDLayer.h  HelloWorldScene.cpp  HelloWorldScene.h  MainMenuScene.cpp  MainMenuScene.h  MenuScene.cpp  MenuScene.h  Observable.h  Observer.h  OptionsScene.cpp  OptionsScene.h  Player.cpp  Player.h  Settings.cpp  Settings.h  StoryScene.cpp  TILE_NAMES.h  TileMapLayer.cpp  TileMapLayer.h  UIScene.cpp  UIScene.h
Classes/About/: AboutScene.cpp  AboutScene.h
Classes/Algorithm/: GameAlgorithm.cpp  GameAlgorithm.h
Classes/Atlas/: BeeHiveAtlas.cpp  BeeHiveAtlas.h  HoneyExtractorAtlas.cpp  HoneyExtractorAtlas.h
Classes/Effects/: BeeParticles.cpp  BeeParticles.h  HealthIndicators.cpp  HealthIndicators.h
Classes/Game/: BeeHive.cpp  BeeHive.h  BeeHiveAtlas.cpp  BeeHiveAtlas.h  Container.cpp  Container.h  GameScene.cpp  GameScene.h  HUDLayer.cpp  HUDLayer.h  HoneyExtractor.cpp  HoneyExtractor.h  Interacter.cpp  Interacter.h  ItemPanelLayer.cpp  ItemPanelLayer.h  Player.cpp  Player.h  Prices.cpp  Prices.h  SeasonChanger.cpp  SeasonChanger.h  TileMapLayer.cpp  TileMapLayer.h  Time.cpp  Time.h  TouchUtil.cpp  TouchUtil.h  Wallet.cpp  Wallet.h
Classes/HeaderFiles/: CHILD_NAMES.h  DEFINITIONS.h  HealthStates.h  Interactable.h  Restorable.h  Seasons.h  TILE_NAMES.h  TileGID.h  TimeStruct.h
Classes/Interaction/: BeeHivePopup.cpp  BeeHivePopup.h  HoneyExtractorPopup.cpp  HoneyExtractorPopup.h  HoneyMover.cpp  HoneyMover.h  InteractionNode.cpp  InteractionNode.h
Classes/ItemPanel/: ItemPanelLayer - Copy.cpp  ItemPanelLayer.cpp  ItemPanelLayer.h  TouchUtil.cpp  TouchUtil.h
Classes/MainMenu/: MainMenuScene.cpp  MainMenuScene.h
Classes/Options/: OptionsScene.cpp  OptionsScene.h  SaveDeleteConfirmation.cpp  SaveDeleteConfirmation.h
Classes/Resources/: SpriteContainer.cpp  SpriteContainer.h  Sprites.cpp  Sprites.h  TileGID.h  Tiles.cpp  Tiles.h
Classes/SaveLoad/: SaveLoad.cpp  SaveLoad.h
Classes/Shop/: Items.h  ShopScene.cpp  ShopScene.h  items.md
Classes/Story/: Popup.cpp  Popup.h  StoryScene.cpp  StoryScene.h
Classes/TileMapObjects/: Placeable.h  PlaceableSprite.cpp  PlaceableSprite.h  PlaceableTile.cpp  PlaceableTile.h  Tile.cpp  Tile.h  TileGID.cpp  TileGID.h  Tree.cpp  Tree.h
Resources/Spritesheet/: Grösse der Tiles.odt  spritesheet.tps  tilemap.tmx  tilesheet.tps
Resources/Spritesheet/HD/: spritesheet.plist  tilesheet.plist
Resources/Spritesheet/SD/: spritesheet.plist  tilesheet.plist
Resources/Spritesheets/HD/: spritesheet.plist
Resources/Spritesheets/SD/: spritesheet.plist
Resources/Tilemap/HD/: tilemap.tmx  tileset.tsx
Resources/Tilemap/SD/: tilemap.tmx  tileset.tsx
Resources/menu/: credits.txt
Resources/sprites/: Grösse der Tiles.odt
Resources/tilemapTobi/: mapISO.tmx  tmw_desert_spacing.tsx
Resources/tilemaps/: mapSD.tmx  pokemap.tmx  spritesheet.tsx  spritesheetSD.tsx  testMapMauro.tmx  tilemapHD.tmx  tilemapSD.tmx  tilesetHD.tsx  tileset_all.tsx
Resources/tilesets/: sizes.md  spritesheetHD.plist  spritesheetSD.plist  tilesetHD.tsx
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/: Android.mk
proj.android/app/release/: output.json
proj.android/app/res/values/: strings.xml
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/PSE-Bee-Game.xcodeproj/: project.pbxproj
proj.ios_mac/PSE-Bee-Game.xcodeproj/project.xcworkspace/xcuserdata/aljaschue.xcuserdatad/: UserInterfaceState.xcuserstate
proj.ios_mac/PSE-Bee-Game.xcodeproj/xcuserdata/aljaschue.xcuserdatad/xcschemes/: xcschememanagement.plist
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
proj.win32/: PSE-Bee-Game.sln  PSE-Bee-Game.vcxproj  PSE-Bee-Game.vcxproj.filters
proj.win32/enc_temp_folder/a182963cfafdb5c89d3f519e9c83/: TileMapLayer.cpp
